--- a/styles/default.less
+++ b/styles/default.less
@@ -1,14 +1,102 @@
 body{
-  main{
     &.container-fluid{
       padding:0px
     }
     header{
       div.jumbotron{
-        margin:0px;
-        padding: 0px;
+        margin:15px 0px 0px 0px;
+        padding-bottom: 0px;
+        padding-top: 15px;
+        border-radius: 0px;
+        background-color: #fff;
+        h1{
+          text-align: center;
+          font-size: 35px;
+          color:#d73a1e;
+          font-weight: bold;
+          margin: 0px;
+          span{
+            font-weight: normal;
+          }
+        }
+        h2{
+          margin-top: 0px;
+          text-align: center;
+          font-size: 20px;
+          color: #523468;
+          &:after, &:before{
+            display: inline-block;
+            content: "";
+            border-top:.5px solid rgba(0, 0, 0, .5);
+            width:20px;
+            margin:9px 3px;
+          }
+        }
+        .free{
+          width: 200px;
+          color:#d73a1e;
+          margin-left: 90px;
+          p{
+            font-style: italic;
+            margin-bottom: 0;
+          }
+        }
+        .cart{
+          color:#777;
+          p{
+            display: inline;
+          }
+          span{
+            font-size: 21px;
+          }
+        }
+      }
+      nav{
+        &.navbar-default{
+          background-color: #523468;
+          .navbar-nav li {
+            margin: 10px;
+            a{
+              color: #fff;
+              &:hover{
+                color: #fff;
+                background-color: rgba(0, 0, 0, .2);
+                border-radius: 5px;
+              }
+            }
+          }
+        }
       }
     }
+
+    main{
+      h1{
+       text-align: center;
+      }
+      #lista-produtos{
+        li{
+          list-style: none;
+          img{
+            cursor: pointer;
+            // width:250px;
+            // height:250px;
+            box-shadow: 1px 3px 5px rgba(0, 0, 0, .2);
+          }
+          p{
+            text-align: center;
+            width: 100%;
+            span{
+              font-weight: bold;
+              &.price{
+                color:#d73a1e;
+                font-weight: normal;
+              }
+            }
+          }
+        }
+      }
+    }
+
     footer{
       background-color: #e6e6e6;
       padding: 50px;
@@ -52,16 +140,16 @@ body{
         padding: 30px 20px;
         font-size: 17px;
         border-radius: 5px;
-        width: 450px;
+        // width: 450px;
         height: 160px;
         p.italic{
           font-style: italic;
         }
         input.form-control{
-          width:285px;
+          max-width:60%;
+          display: inline-block;
         }
         button{
-          padding: 6px 25px;
           &.btn-default{
             text-transform: uppercase;
             background-color: #d73a1e;
@@ -76,19 +164,6 @@ body{
         }
       }
     }
-  }
-
-  #lista-produtos{
-    li{
-      list-style: none;
-      img{
-        cursor: pointer;
-        width:250px;
-        height:250px;
-        border:1px solid black;
-      }
-    }
-  }
 
   .lightbox {
     display: none;
